--- a/ToDo App/index.html
+++ b/ToDo App/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <title>Manage Your Tasks</title>
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
